# pyspark-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  clean_databases.sh  docker-compose.yml  pull_request_template.md  pyproject.toml
.github/workflows/: ci.yml
data/seed/: constructors.csv  drivers.csv
docs/diagrams/: pyspark-template.drawio
pyspark_template/: calculator.py  read_drivers.py
pyspark_template/config/: spark_session.py
tests/: conftest.py
tests/unit/: test_calculator.py  test_delta_table.py  test_spark_session.py
